2009-05-22  Vivek Dasmohapatra  <vivek@etla.org>

	* elisp/garak.el (garak-maybe-remove-account): new acct menu command
	(garak-account-list-node-command): new account menu command handled
	(garak-buddy-list-node-widget)   : implement new gui command

2009-05-20  Vivek Dasmohapatra  <vivek@etla.org>

	* elisp/garak.el (garak-error-handler): try to show async errors to user

	* elisp/elim.el (elim-debug): no undo info in debug buffer
	(elim-default-fail-handler): errors to default fail handler if available
	(elim-call-client-handler) : ibid

	* ui_ops/eventloop_ui_ops.c: remove input_get_error, harmful ui op defun

2009-05-19  Vivek Dasmohapatra  <vivek@etla.org>

	* Makefile (OLD_GLIB): more old glib version detect-and-kludge work

	* elim-glibcompat.h: define macros for pre-2.14 glib support.

	* elim-glibcompat.c (elim_g_queue_init)
	(elim_g_hash_table_get_keys): pre-2.14 glib substitute functions

	* elim-client.c (main): use macro in case we're on a pre-2.14 glib

	* handlers/set_prefs.c (_h_elim_set_prefs): ditto

2009-05-18  Vivek Dasmohapatra  <vivek@etla.org>

	* elisp/garak.el (garak-account-list-node-widget): use fallback icon
	(garak): pass in app name when starting elim

	* ui_ops/core_ui_ops.c (_elim_get_ui_info): set app name and version
	(_elim_quit): free up ui info (app name and version) on exit.

2009-05-17  Vivek Dasmohapatra  <vivek@etla.org>

	* handlers/init.c (_h_elim_init): user can set debug on init
	                                  set plugin path to include user dir

	* elisp/garak.el (garak-buddy-list-node-widget): prefer alias in blist

	* signals/file_transfers.c (XSIG, _elim_signal_ft): show ft event origin

	* elisp/garak.el: 
	(garak-ui-ft-update-progress)  : set ft status here too
	(garak-ui-ft-update-display)   : check for done w byte count as well
	(garak-buddy-list-node-command): ui menu send file op done
	(garak-cmd-send-file)          : cli send file function
	(garak-command-handlers, garak-command-match)