@@ -1,5 +1,8 @@
 2009-05-22  Vivek Dasmohapatra  <vivek@etla.org>
 
+	* elisp/elim.el (elim-data-to-proto): binary data protocol serialiser
+	(elim-atom-to-proto): detect and serialise binary data (contains NULs)
+
 	* elisp/garak.el (garak-maybe-remove-account): new acct menu command
 	(garak-account-list-node-command): new account menu command handled
 	(garak-buddy-list-node-widget)   : implement new gui command
